log
Thu 16 May 2024 05:53:41 PM UTC: 
 tests:  0|5
total_score: 0/70
7590edc
Thu 16 May 2024 05:56:10 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
0af7de0
Thu 16 May 2024 06:02:02 PM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  0|0
23ed7f9
Thu 16 May 2024 06:10:51 PM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++-----------------
 1 file changed, 22 insertions(+), 17 deletions(-)
 tests:  2|4
total_score: 15/70
da09b39
Thu 16 May 2024 06:15:37 PM UTC: 
 sudoku.c | 30 ++++++++++++------------------
 1 file changed, 12 insertions(+), 18 deletions(-)
 tests:  6|2
total_score: 45/70
f4a8f5d
Sun 19 May 2024 12:32:46 AM UTC: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:120:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  120 |         Node *aux = top(stack);
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
d99d751
Sun 19 May 2024 12:34:02 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
14395df
